Source/bmalloc/libpas/src/libpas/pas_utils.h
@@ -240,7 +240,7 @@ PAS_API PAS_NO_RETURN PAS_NEVER_INLINE void pas_reallocation_did_fail(const char
 static PAS_ALWAYS_INLINE PAS_NO_RETURN void pas_assertion_failed(
     const char* filename, int line, const char* function, const char* expression)
 {
-    asm volatile("" : "=r"(filename), "=r"(line), "=r"(function), "=r"(expression));
+    __asm__ volatile("" : "=r"(filename), "=r"(line), "=r"(function), "=r"(expression));
     __builtin_unreachable();
 }
 
@@ -264,7 +264,7 @@ static PAS_ALWAYS_INLINE PAS_NO_RETURN void pas_assertion_failed(
 {
 #if PAS_COMPILER(GCC) || PAS_COMPILER(CLANG)
     // Force each assertion crash site to be unique.
-    asm volatile("" : "=r"(filename), "=r"(line), "=r"(function), "=r"(expression));
+    __asm__ volatile("" : "=r"(filename), "=r"(line), "=r"(function), "=r"(expression));
 #endif
     __builtin_trap();
 }
@@ -537,7 +537,7 @@ static inline unsigned pas_reverse(unsigned value)
 {
 #if PAS_ARM64
     unsigned result;
-    asm ("rbit %w0, %w1"
+    __asm__ ("rbit %w0, %w1"
          : "=r"(result)
          : "r"(value));
     return result;
@@ -554,7 +554,7 @@ static inline uint64_t pas_reverse64(uint64_t value)
 {
 #if PAS_ARM64
     uint64_t result;
-    asm ("rbit %0, %1"
+    __asm__ ("rbit %0, %1"
          : "=r"(result)
          : "r"(value));
     return result;
@@ -575,7 +575,7 @@ static inline uint64_t pas_make_mask64(uint64_t num_bits)
 static inline void pas_atomic_store_uint8(uint8_t* ptr, uint8_t value)
 {
 #if PAS_COMPILER(ARM64_ATOMICS_LL_SC)
-    asm volatile (
+    __asm__ volatile (
         "stlrb %w[value], [%x[ptr]]\t\n"
         /* outputs */  :
         /* inputs  */  : [value]"r"(value), [ptr]"r"(ptr)
@@ -595,7 +595,7 @@ static inline bool pas_compare_and_swap_uint8_weak(uint8_t* ptr, uint8_t old_val
 #if PAS_COMPILER(ARM64_ATOMICS_LL_SC)
     uint32_t value = 0;
     uint32_t cond = 0;
-    asm volatile (
+    __asm__ volatile (
         "ldxrb %w[value], [%x[ptr]]\t\n"
         "cmp %w[value], %w[old_value], uxtb\t\n"
         "b.ne 1f\t\n"
@@ -628,7 +628,7 @@ static inline uint8_t pas_compare_and_swap_uint8_strong(uint8_t* ptr, uint8_t ol
 #if PAS_COMPILER(ARM64_ATOMICS_LL_SC)
     uint32_t value = 0;
     uint32_t cond = 0;
-    asm volatile (
+    __asm__ volatile (
     "0:\t\n"
         "ldxrb %w[value], [%x[ptr]]\t\n"
         "cmp %w[value], %w[old_value], uxtb\t\n"
@@ -659,7 +659,7 @@ static inline bool pas_compare_and_swap_uint16_weak(uint16_t* ptr, uint16_t old_
 #if PAS_COMPILER(ARM64_ATOMICS_LL_SC)
     uint32_t value = 0;
     uint32_t cond = 0;
-    asm volatile (
+    __asm__ volatile (
         "ldxrh %w[value], [%x[ptr]]\t\n"
         "cmp %w[value], %w[old_value], uxth\t\n"
         "b.ne 1f\t\n"
@@ -692,7 +692,7 @@ static inline bool pas_compare_and_swap_uint32_weak(uint32_t* ptr, uint32_t old_
 #if PAS_COMPILER(ARM64_ATOMICS_LL_SC)
     uint32_t value = 0;
     uint32_t cond = 0;
-    asm volatile (
+    __asm__ volatile (
         "ldxr %w[value], [%x[ptr]]\t\n"
         "cmp %w[value], %w[old_value]\t\n"
         "b.ne 1f\t\n"
@@ -725,7 +725,7 @@ static inline uint32_t pas_compare_and_swap_uint32_strong(uint32_t* ptr, uint32_
 #if PAS_COMPILER(ARM64_ATOMICS_LL_SC)
     uint32_t value = 0;
     uint32_t cond = 0;
-    asm volatile (
+    __asm__ volatile (
     "0:\t\n"
         "ldxr %w[value], [%x[ptr]]\t\n"
         "cmp %w[value], %w[old_value]\t\n"
@@ -756,7 +756,7 @@ static inline bool pas_compare_and_swap_uint64_weak(uint64_t* ptr, uint64_t old_
 #if PAS_COMPILER(ARM64_ATOMICS_LL_SC)
     uint64_t value = 0;
     uint64_t cond = 0;
-    asm volatile (
+    __asm__ volatile (
         "ldxr %x[value], [%x[ptr]]\t\n"
         "cmp %x[value], %x[old_value]\t\n"
         "b.ne 1f\t\n"
@@ -789,7 +789,7 @@ static inline uint64_t pas_compare_and_swap_uint64_strong(uint64_t* ptr, uint64_
 #if PAS_COMPILER(ARM64_ATOMICS_LL_SC)
     uint64_t value = 0;
     uint64_t cond = 0;
-    asm volatile (
+    __asm__ volatile (
     "0:\t\n"
         "ldxr %x[value], [%x[ptr]]\t\n"
         "cmp %x[value], %x[old_value]\t\n"
@@ -867,14 +867,14 @@ static PAS_ALWAYS_INLINE void pas_fence_after_load(void)
 static PAS_ALWAYS_INLINE void pas_store_store_fence(void)
 {
     if (PAS_ARM)
-        asm volatile ("dmb ishst" : : : "memory");
+        __asm__ volatile ("dmb ishst" : : : "memory");
     else
         pas_compiler_fence();
 }
 
 static PAS_ALWAYS_INLINE uintptr_t pas_opaque(uintptr_t value)
 {
-    asm volatile ("" : "+r"(value) : : "memory");
+    __asm__ volatile ("" : "+r"(value) : : "memory");
     return value;
 }
 
@@ -939,7 +939,7 @@ static inline bool pas_compare_and_swap_pair_weak(void* raw_ptr,
     uintptr_t new_high = pas_pair_high(new_value);
     uintptr_t cond = 0;
     uintptr_t temp = 0;
-    asm volatile (
+    __asm__ volatile (
         "ldxp %x[low], %x[high], [%x[ptr]]\t\n"
         "eor %x[cond], %x[high], %x[old_high]\t\n"
         "eor %x[temp], %x[low], %x[old_low]\t\n"
@@ -986,7 +986,7 @@ static inline pas_pair pas_compare_and_swap_pair_strong(void* raw_ptr,
     uintptr_t new_high = pas_pair_high(new_value);
     uintptr_t cond = 0;
     uintptr_t temp = 0;
-    asm volatile (
+    __asm__ volatile (
     "0:\t\n"
         "ldxp %x[low], %x[high], [%x[ptr]]\t\n"
         "eor %x[cond], %x[high], %x[old_high]\t\n"
@@ -1037,7 +1037,7 @@ static inline void pas_atomic_store_pair(void* raw_ptr, pas_pair value)
     uintptr_t low = pas_pair_low(value);
     uintptr_t high = pas_pair_high(value);
     uintptr_t cond = 0;
-    asm volatile (
+    __asm__ volatile (
     "0:\t\n"
         "ldxp xzr, %x[cond], [%x[ptr]]\t\n"
         "stlxp %w[cond], %x[low], %x[high], [%x[ptr]]\t\n"
@@ -1073,7 +1073,7 @@ static PAS_ALWAYS_INLINE bool pas_compare_ptr_opaque(uintptr_t a, uintptr_t b)
 #if PAS_COMPILER(CLANG)
 #if PAS_ARM64
     uint32_t cond = 0;
-    asm volatile (
+    __asm__ volatile (
         "cmp %x[a], %x[b]\t\n"
         "cset %w[cond], eq\t\n"
         /* outputs */  : [cond]"=&r"(cond)
